spring_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot
  labels:
   app: springboot
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 33333
    protocol: TCP
  selector:
    app: springboot
