spring_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - spring.tdashpute.online #Use your domain
    secretName: tls-secret
  rules:
  - host: spring.tdashpute.online #Use your domain
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: springboot
            port:
              number: 80
